<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@drawable/img_sky">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:src="@drawable/aku" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/divaretta_kiesa_sumartha"
            android:fontFamily="@font/bebas_font">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/idn_akhwat"
            android:fontFamily="@font/bebas_font">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#E6CEFF">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="400sp"
                android:gravity="center"
                android:fontFamily="@font/caviardreams_bold"
                android:text="@string/my_profile"
                android:textColor="#9C6CA6"
                android:textSize="20sp">
            </TextView>
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:background="#B39DDB"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="16sp"
            app:drawableTopCompat="@drawable/ic_me"
            android:text="@string/txt_profile"
            android:fontFamily="@font/bebas_font"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#836fa9"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="16sp"
            app:drawableTopCompat="@drawable/ic_baseline_people_24"
            android:text="@string/txt_friends"
            android:fontFamily="@font/bebas_font"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#836fa9"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="16sp"
            android:text="@string/txt_academy"
            android:fontFamily="@font/bebas_font"
            app:drawableTopCompat="@drawable/ic_baseline_school_24" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#836fa9"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:padding="@dimen/_16dp"
            app:drawableTopCompat="@drawable/ic_gambar"
            android:text="@string/txt_gallery"
            android:fontFamily="@font/bebas_font"/>
    </LinearLayout>
    </LinearLayout>
</LinearLayout>